change route path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://choi-songyi.github.io/",
+  "homepage": "https://choi-songyi.github.io/react_shoes-shop/",
   "name": "shopping",
   "version": "0.1.0",
   "private": true,
